Use SQL to load data for the the Dashboard Violations tab when using postgres db CLM-32516 (#12853)